@@ -13,7 +13,3 @@ autoreconf --force --install -Wall -Wno-obsolete $* || exit 1
 echo "Now run ./configure and then make."
 exit 0
 
-
-
-
-
