@@ -11,6 +11,12 @@ Version 1.4.5
 	* Fix for a bug in makeAction where va_arg was beeing called one
 	extra time.
 
+2007-04-19 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	* SF Tracker [ 1703533 ] Patch to make it compile under FreeBSD
+	Submitted By: Timothy Redaelli - drittz
+	I made some patches to make it compile under FreeBSD using
+	gethostbyaddr_r when supported.
+
 *************************************************************************
 Version 1.4.4
 *************************************************************************
